# gecp

./: .gitignore  README.md  analysis.csv  baseline_generate.py  eval_submission.csv  evaluate.py  knou.csv  knou.ipynb  metrics.py  promptTemplate.py  prompts.py  pyproject.toml  submission.csv  test.ipynb  test2.ipynb  test_evaluate.ipynb  test_generate.ipynb  test_generate.py
data/: sample_submissioncsv.csv  test.csv  train_dataset.csv
