[project]
name = "prompthon-baseline"
version = "0.1.0"
description = "Baseline code for Prompthon (Prompt Hackerthon) using Upstage API"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "openai>=1.37.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.79",
    "langchain-upstage>=0.7.4",
    "langchain-ollama>=0.3.10",
    "matplotlib>=3.10.7",
    "koreanize-matplotlib>=0.1.1",
    "setuptools>=80.9.0",
]
